@@ -1,3 +1,6 @@
+2017-10-21 (0.12.10)
+	COMMON: optimise array handling
+
 2017-10-19 (0.12.10)
 	COMMON: fix win32 run regression
 
